[package]
name = "lastochka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.1"
bytes = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp", "connection-manager"] }
warp = "0.3.5"
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
futures = "0.3"
mobc-redis = "0.8.0"
futures-util = "0.3.26"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
iptables = "0.5.0"
notify = "6.1.0"
hyper-tls = "0.5.0"
http = "0.2.9"
